--- a/rApp/src/renderer/index.ejs
+++ b/rApp/src/renderer/index.ejs
@@ -6,7 +6,8 @@
       http-equiv="Content-Security-Policy"
       content="script-src 'self' 'unsafe-inline'"
     />
-    <title>Hello Electron React!</title>
+
+    <title>RoboCar</title>
   </head>
   <body>
     <div id="root"></div>
