--- a/rApp/src/renderer/App.css
+++ b/rApp/src/renderer/App.css
@@ -1,11 +1,43 @@
-/*
+  /*
  * @NOTE: Prepend a `~` to css file paths that are in your node_modules
  *        See https://github.com/webpack-contrib/sass-loader#imports
  */
+
+  html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+    height: 100%;
+    margin: 0;
+    /*background-color: #f5f5f5 ;*/
+  }
+
+  .App {
+    /*background-color: #f5f5f5 ;*/
+    height: fit-content;
+    margin: 0;
+  }
+  img, picture, video, canvas, svg {
+    display: block;
+    max-width: 100%;
+  }
+  input, button, textarea, select {
+    font: inherit;
+  }
+  p, h1, h2, h3, h4, h5, h6 {
+    overflow-wrap: break-word;
+  }
+  #root, #__next {
+    height: 100%;
+    min-height: fit-content;
+    isolation: isolate;
+  }
+
 body {
   position: relative;
   color: white;
   height: 100vh;
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
   background: linear-gradient(
     200.96deg,
     #fedc2a -29.09%,
@@ -54,9 +86,9 @@ a:hover {
   text-decoration: none;
 }
 
-.Hello {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 20px 0;
-}
+/*.Hello {*/
+/*  display: flex;*/
+/*  justify-content: center;*/
+/*  align-items: center;*/
+/*  margin: 20px 0;*/
+/*}*/
