--- a/rApp/src/renderer/App.css
+++ b/rApp/src/renderer/App.css
@@ -1,76 +1,87 @@
-  /*
- * @NOTE: Prepend a `~` to css file paths that are in your node_modules
- *        See https://github.com/webpack-contrib/sass-loader#imports
- */
+/*  !**/
+/* * @NOTE: Prepend a `~` to css file paths that are in your node_modules*/
+/* *        See https://github.com/webpack-contrib/sass-loader#imports*/
+/* *!*/
 
   html, body {
     max-width: 100%;
     overflow-x: hidden;
-    height: 100%;
+    /*min-height: 100%;*/
+    min-height: 100vh;
     margin: 0;
+    padding: 0;
+      background: linear-gradient(
+        200.96deg,
+        #fedc2a -29.09%,
+        #dd5789 51.77%,
+        #7a2c9e 129.35%
+      );
+
     /*background-color: #f5f5f5 ;*/
   }
 
   .App {
     /*background-color: #f5f5f5 ;*/
-    height: fit-content;
+    min-height: 100%;
     margin: 0;
   }
-  img, picture, video, canvas, svg {
-    display: block;
-    max-width: 100%;
-  }
-  input, button, textarea, select {
-    font: inherit;
-  }
-  p, h1, h2, h3, h4, h5, h6 {
-    overflow-wrap: break-word;
-  }
+/*  }*/
+/*  img, picture, video, canvas, svg {*/
+/*    display: block;*/
+/*    max-width: 100%;*/
+/*  }*/
+/*  input, button, textarea, select {*/
+/*    font: inherit;*/
+/*  }*/
+/*  p, h1, h2, h3, h4, h5, h6 {*/
+/*    overflow-wrap: break-word;*/
+/*  }*/
   #root, #__next {
-    height: 100%;
-    min-height: fit-content;
+    /*height: 100vh;*/
+    /*min-height: fit-content;*/
+    min-height: 98vh;
     isolation: isolate;
   }
 
-body {
-  position: relative;
-  color: white;
-  height: 100vh;
-  line-height: 1.5;
-  -webkit-font-smoothing: antialiased;
-  background: linear-gradient(
-    200.96deg,
-    #fedc2a -29.09%,
-    #dd5789 51.77%,
-    #7a2c9e 129.35%
-  );
-  font-family: sans-serif;
-  overflow-y: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-
-li {
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-  height: fit-content;
-  width: fit-content;
-  margin: 10px;
-}
-
-a:hover {
-  opacity: 1;
-  text-decoration: none;
-}
-
-/*.Hello {*/
-/*  display: flex;*/
-/*  justify-content: center;*/
-/*  align-items: center;*/
-/*  margin: 20px 0;*/
+/*body {*/
+/*  position: relative;*/
+/*  color: white;*/
+/*  height: 100vh;*/
+/*  line-height: 1.5;*/
+/*  -webkit-font-smoothing: antialiased;*/
+/*  background: linear-gradient(*/
+/*    200.96deg,*/
+/*    #fedc2a -29.09%,*/
+/*    #dd5789 51.77%,*/
+/*    #7a2c9e 129.35%*/
+/*  );*/
+/*  font-family: sans-serif;*/
+/*  overflow-y: hidden;*/
+/*  !*display: flex;*!*/
+/*  !*justify-content: center;*!*/
+/*  !*align-items: center;*!*/
 /*}*/
+
+
+/*li {*/
+/*  list-style: none;*/
+/*}*/
+
+/*a {*/
+/*  text-decoration: none;*/
+/*  height: fit-content;*/
+/*  width: fit-content;*/
+/*  margin: 10px;*/
+/*}*/
+
+/*a:hover {*/
+/*  opacity: 1;*/
+/*  text-decoration: none;*/
+/*}*/
+
+/*!*.Hello {*!*/
+/*!*  display: flex;*!*/
+/*!*  justify-content: center;*!*/
+/*!*  align-items: center;*!*/
+/*!*  margin: 20px 0;*!*/
+/*!*}*!*/
