--- a/rApp/src/components/Maps/MapsMain.module.scss
+++ b/rApp/src/components/Maps/MapsMain.module.scss
@@ -1,6 +1,7 @@
 .gridContainer{
 
   display:grid;
+  //grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
   grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
   grid-gap:4rem;
 
