--- a/rApp/src/components/ControlCar/remoteController/RemoteController.module.scss
+++ b/rApp/src/components/ControlCar/remoteController/RemoteController.module.scss
@@ -81,8 +81,15 @@ opacity: 1;
 }
 
 .innerCell{
+  display: flex;
+  flex-direction: column;
+  font-size: 12px;
+  span:nth-child(2){
+    font-size: 8px;
+  }
   //position: absolute;
 }
+
 
 
 
